@@ -2,52 +2,53 @@ package com.springfield.plant.service;
 
 import com.springfield.plant.model.Reactor;
 import com.springfield.plant.repository.ReactorRepository;
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.Mockito;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.DisplayName;
+import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.Date;
+import java.time.Instant;
+import java.util.List;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.when;
 
-/**
- * ☢️ LEGACY ALERT: JUnit 4 asserts, no @DisplayName, mock setup circa 2015.
- */
-public class ReactorServiceTest {
+class ReactorServiceTest {
 
     private ReactorRepository repository;
     private ReactorService service;
 
-    @Before
-    public void setUp() {
-        repository = Mockito.mock(ReactorRepository.class);
+    @BeforeEach
+    void setUp() {
+        repository = mock(ReactorRepository.class);
         service = new ReactorService(repository);
     }
 
     @Test
-    public void totalOnlineOutputAddsUp() {
-        Reactor a = new Reactor("Old Bessie", "7G", "ONLINE", 480, new Date());
-        Reactor b = new Reactor("Core Blimey", "7G", "ONLINE", 512, new Date());
-        Mockito.when(repository.findByStatus("ONLINE")).thenReturn(Arrays.asList(a, b));
+    @DisplayName("shouldSumOnlineOutput_whenOnlineReactorsExist")
+    void shouldSumOnlineOutput_whenOnlineReactorsExist() {
+        var a = new Reactor("Old Bessie", "7G", "ONLINE", 480, Instant.now());
+        var b = new Reactor("Core Blimey", "7G", "ONLINE", 512, Instant.now());
+        when(repository.findByStatus("ONLINE")).thenReturn(List.of(a, b));
 
-        assertEquals(Integer.valueOf(992), service.totalOnlineOutputMw());
+        assertThat(service.totalOnlineOutputMw()).isEqualTo(992);
     }
 
     @Test
-    public void reactorNeverInspectedIsOverdue() {
-        Reactor never = new Reactor("Backup Bart", "3B", "OFFLINE", 0, null);
-        Mockito.when(repository.findAll()).thenReturn(Collections.singletonList(never));
+    @DisplayName("shouldMarkReactorOverdue_whenInspectionIsMissing")
+    void shouldMarkReactorOverdue_whenInspectionIsMissing() {
+        var never = new Reactor("Backup Bart", "3B", "OFFLINE", 0, null);
+        when(repository.findAll()).thenReturn(List.of(never));
 
-        assertEquals(1, service.overdueForInspection(90).size());
+        assertThat(service.overdueForInspection(90)).hasSize(1);
     }
 
     @Test
-    public void bannerInsistsEverythingIsFine() {
-        Mockito.when(repository.findByStatus(Mockito.anyString())).thenReturn(Collections.<Reactor>emptyList());
+    @DisplayName("shouldReportFineBanner_whenNoReactorsPresent")
+    void shouldReportFineBanner_whenNoReactorsPresent() {
+        when(repository.findByStatus(anyString())).thenReturn(List.of());
 
-        assertTrue(service.statusBanner().contains("Everything is fine."));
+        assertThat(service.statusBanner()).contains("Everything is fine.");
     }
 }
